--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "com.ipfsoftwares.mangi360"
-        minSdkVersion 19
+        applicationId "com.ipfsoftwares.mangi360.customer"
+        minSdkVersion 18
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
