--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,14 @@ android {
 dependencies {
     testCompile 'junit:junit:4.12'
 
+
     compile 'com.android.support:design:25.3.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
+
+    // Zxing
+    compile 'com.journeyapps:zxing-android-embedded:3.5.0'
 
     // Google
     compile 'com.google.android.gms:play-services-auth:10.2.1'
